# SGRML

./: LICENSE  README.md  check_terminal.py  pyproject.toml
src/sgrml/: __init__.py  parser.py
tests/: test_parser.py
